--- a/views/join.ejs
+++ b/views/join.ejs
@@ -7,7 +7,7 @@
     <meta name="veiwport" content="width=device-width initial-scale=1">
     <title>Join!</title>
     <style>
-        .message{
+        .messages{
             color:#963b3b;
             margin-bottom: 16px;
         }
@@ -18,6 +18,7 @@
     <h1>
         join my website
     </h1>
+    <section class="messages"> <%= message %></section>
     <form action="/join" method="post">
         email : <input type="text" name="email"><br>
         password : <input type="text" name="password"><br>
