--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,53 +1,58 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Login</title>
+        <link rel="stylesheet" href="/css/ui.css">
+    </head>
+    <body>
+        <h1>Login</h1>
+        <div class="formWrap">
+            <form action="" method="post">
+                <div class="inputWrap">
+                    <div class="email">
+                		<span> Email </span> <input type="text" name="email"><br/>
+                    </div>
+                    <div class="password">
+                        <span> Password </span> <input type="password" name="password"><br/>
+                    </div>
+                </div>
+                <input class="sendbtn" type="submit">
+    	   </form>
+        </div>
 
-<head>
-    <meta charset="UTF-8">
-    <title>email form</title>
-</head>
+    	<div class="result"></div>
 
-<body>
+        <div class='signup'><a href='/join'>Sign up</a></div>
 
-    <form action="/email/form" method="post">
-        email : <input type="text" name="email"><br />
-        password : <input type="text" name="password"><br />
-    </form>
 
-    <button class="ajaxsend">
-        login
-    </button>
-
-    <div class="result">
-
-    </div>
-    <script>
-        document.querySelector('.ajaxsend').addEventListener('click',
-            function () {
-                var email = document.getElementsByName('email')[0].value;
-                var email = document.getElementsByName('password')[0].value;
-                var inputdata = document.forms[0].elements[0].value;
-                sendAjax('http://127.0.0.1:3000/email/ajax', {email : email, password : password});
-            });
-
-        function sendAjax(url, data) {
-
-            data = JSON.stringify(data);
-
-            var xhr = new XMLHttpRequest();
-            xhr.open('POST', url);
-            xhr.setRequestHeader('Content-Type', "application/json");
-            xhr.send(data);
-
-            xhr.addEventListener('load', function () {
-                var result = JSON.parse(xhr.responseText);
-                var resultDiv = document.querySelector(".result");
-
-                if (result.result !== "ok") resultDiv.innerHTML = "your email is not found";
-               else  resultDiv.innerHTML = result.name;
-
-            })
-        };
-    </script>
-</body>
-
+    	<script>
+    		document.querySelector('.sendbtn').addEventListener('click', function(e) {
+                e.preventDefault();
+    			var email = document.getElementsByName('email')[0].value
+                var password = document.getElementsByName('password')[0].value;
+    			sendAjax('http://localhost:3000/login', {'email' : email, 'password' : password}
+                );
+    		})
+    		function sendAjax(url, data){ 
+    			data = JSON.stringify(data);
+    			var xhr = new XMLHttpRequest();
+    			xhr.open('POST', url);
+    			xhr.setRequestHeader('Content-Type', "application/json");
+    			xhr.send(data);
+    			xhr.addEventListener('load', function() {
+    				var result = JSON.parse(xhr.responseText);
+                    var resultDiv = document.querySelector(".result");
+    				if(result.email)  {
+                        //resultDiv.innerHTML = "welcome, " + result.email + "!!";
+                        window.location.href="/main";
+                    }
+    				else if (xhr.status === 401) resultDiv.innerHTML = result;
+                    else resultDiv.innerHTML = result;
+                
+    			});
+    		}
+    	</script>
+        
+    </body>
 </html>
