--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,33 +1,28 @@
-<!DOCTYPE html>
-<html lang="ko">
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Welcome My Site</title>
+        <link rel="stylesheet" href="/css/ui.css">
+    </head>
+    <body>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta name="veiwport" content="width=device-width initial-scale=1">
-    <title>main</title>
-</head>
+    <header>
+        <div><a href="/movie/list">영화 API 테스트</a></div>
+        <div><a href="/logout">logout</a></div>
+    </header>
 
-<body>
-    <h1>
-        main page
-    </h1>
+    <section class="content">
+        <h1>main page</h1>
 
-<h3>
-    welcome, <%= id %> 번째 가입자님
-</h3>
+        <h3>welcome, <%= id %> 번째 가입고객님!!</h3>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Consequatur necessitatibus nobis atque similique reprehenderit.
-        Totam necessitatibus at ratione nostrum, asperiores ipsum veniam,
-        impedit tempora qui veritatis eius pariatur praesentium nulla.
-    </p>
+        <p><span><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore veritatis recusandae nihil doloribus laboriosam neque dolorem, adipisci dolorum itaque sint commodi quos porro, aut ad? Necessitatibus, porro. Officiis, praesentium, labore!</span>
+        <span>Sit harum quisquam voluptatem dolore animi ut accusantium quos placeat consequatur consectetur nesciunt, nobis cumque, hic enim reprehenderit laborum ipsa vero natus quasi doloribus odit sint. Dolore, reiciendis quam eum.</span>
+        <span>Aspernatur quam, nulla vel rerum, quisquam neque aliquam. Nostrum molestiae exercitationem blanditiis at ea, praesentium, quod, provident a dignissimos temporibus laboriosam accusantium quam porro sapiente ipsum sint numquam fuga odio.</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed eveniet minima officiis velit, blanditiis cum aut! Perspiciatis, natus at, ducimus voluptas sed aliquid numquam quidem praesentium, provident sunt qui repellendus.</span><span>Voluptatem officiis eligendi quisquam tempora iste voluptatibus quasi eaque repudiandae, harum distinctio autem sunt ad vero obcaecati ipsam accusamus. Ducimus fuga architecto quisquam sed dolorem. Eligendi perspiciatis odio, ab quas!</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae veniam magnam dignissimos ullam at obcaecati debitis atque. Saepe, voluptatem molestiae. Laboriosam voluptates hic ducimus quam voluptatum quos aliquam laudantium, doloremque!</p>
+    </section>
 
-    <img src="images/KakaoTalk_20210818_170028041.png">
-    <script src="main.js">
-
-    </script>
-</body>
-
+    </body>
 </html>
